fix(diaktoll): menuitems overlapping title text

--- a/apps/frontend/src/app/components/header/header.component.scss
+++ b/apps/frontend/src/app/components/header/header.component.scss
@@ -409,6 +409,7 @@ i {
     height: 40px;
     vertical-align: middle;
     outline: 0;
+    font-family: 'Cabin', sans-serif;
 
     @media screen and (max-width: 992px) {
       height: 48px;
